changes on May 30th

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "YelpCamp",
   "main": "app.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
