--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
@@ -19,6 +20,7 @@
     "mongoose": "^5.9.16",
     "node-geocoder": "^3.27.0",
     "node.js": "0.0.1-security",
+    "nodemailer": "^6.4.8",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
