--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
+    "locus": "^2.0.4",
     "method-override": "^3.0.0",
     "module_name": "^1.0.0",
     "moment": "^2.26.0",
